fix Installation
images were overflowed screen on mobile phones.

--- a/frontend/src/styles/Installation.css
+++ b/frontend/src/styles/Installation.css
@@ -2,4 +2,11 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    overflow-x: hidden;
+    max-width: 700px;
+}
+
+img {
+    max-width: 700px;
+    overflow-x: hidden;
 }
